Add image sizes, card component, content text colour, remove 'is' prefix

--- a/src/elements/content.scss
+++ b/src/elements/content.scss
@@ -1,4 +1,5 @@
 $content-margin: 1.5rem !default;
+$content-color: $body-color !default;
 $content-line-height: config('leading.loose') !default;
 
 $content-table-padding: 0.5rem 0.75rem !default;
@@ -6,6 +7,7 @@ $content-table-border-color: config('colors.grey') !default;
 
 .content {
     overflow: auto;
+    color: $content-color;
     line-height: $content-line-height;
     
     li + li {
