--- a/src/base/generic.scss
+++ b/src/base/generic.scss
@@ -65,3 +65,13 @@ hr {
 [v-cloak] {
     display: none;
 }
+
+@responsive {
+    .border-box {
+        box-sizing: border-box;
+    }
+    
+    .content-box {
+        box-sizing: content-box;
+    }
+}
