--- a/src/components/modal.scss
+++ b/src/components/modal.scss
@@ -1,4 +1,5 @@
 $modal-z-index: 50 !default;
+$modal-padding: 3rem !default;
 $modal-background-color: rgba(0, 0, 0, 0.85) !default;
 
 .modal {
@@ -30,7 +31,13 @@ $modal-background-color: rgba(0, 0, 0, 0.85) !default;
 
 .modal-content {
     width: 100%;
-    padding: 0 20px;
+    margin: 0 auto;
+    overflow: auto;
     position: relative;
-    max-height: calc(100vh - 160px);
+    max-width: calc(100vw - #{$modal-padding} * 2);
+    max-height: calc(100vh - #{$modal-padding} * 2);
+
+    &.h-full {
+        min-height: calc(100vh - #{$modal-padding} * 2);
+    }
 }
