--- a/src/elements/icon.scss
+++ b/src/elements/icon.scss
@@ -1,15 +1,22 @@
-$icon-dimensions: 1.5rem !default;
-$icon-medium-dimensions: 2rem !default;
+$icon-dimension: 1.5rem !default;
+
+$icon-sizes: (
+    small: 1rem,
+    medium: 2rem,
+    large: 3rem
+) !default;
 
 .icon {
     align-items: center;
     display: inline-flex;
+    width: $icon-dimension;
+    height: $icon-dimension;
     justify-content: center;
-    width: $icon-dimensions;
-    height: $icon-dimensions;
 
-    &.medium {
-        width: $icon-medium-dimensions;
-        height: $icon-medium-dimensions;
+    @each $name, $size in $icon-sizes {
+        &.icon-#{$name} {
+            width: $size;
+            height: $size;
+        }
     }
 }
