Move list variables into variable file so they can be extended

--- a/src/util/_index.scss
+++ b/src/util/_index.scss
@@ -1,5 +1,6 @@
-@charset "utf-8";
+@charset 'UTF-8';
 
-@import "animations";
-@import "control";
-@import "mixins";
+@import 'variables';
+@import 'animations';
+@import 'mixins';
+@import 'control';
