--- a/src/components/_index.scss
+++ b/src/components/_index.scss
@@ -1,6 +1,6 @@
-@charset "utf-8";
+@charset 'UTF-8';
 
-@import "card";
-@import "dropdown";
-@import "modal";
-@import "pagination";
+@import 'card';
+@import 'dropdown';
+@import 'modal';
+@import 'pagination';
