--- a/src/elements/_index.scss
+++ b/src/elements/_index.scss
@@ -1,10 +1,10 @@
-@charset "utf-8";
+@charset 'UTF-8';
 
-@import "button";
-@import "content";
-@import "form";
-@import "hamburger";
-@import "icon";
-@import "image";
-@import "table";
-@import "title";
+@import 'button';
+@import 'content';
+@import 'form';
+@import 'hamburger';
+@import 'icon';
+@import 'image';
+@import 'table';
+@import 'title';
