--- a/src/elements/image.scss
+++ b/src/elements/image.scss
@@ -1,4 +1,22 @@
-$image-sizes: 60 !default;
+$image-sizes: 60 80 100 !default;
+
+$image-ratios: (
+    1by1: 100%,
+    1by2: 50%,
+    1by3: 300%,
+    2by1: 50%,
+    2by3: 150%,
+    3by1: 33.3333%,
+    3by2: 66.6666%,
+    3by4: 133.3333%,
+    3by5: 166.6666%,
+    4by3: 75%,
+    4by5: 125%,
+    5by3: 60%,
+    5by4: 80%,
+    9by16: 177.7777%,
+    16by9: 56.25%
+) !default;
 
 .image {
     display: block;
@@ -10,87 +28,11 @@ $image-sizes: 60 !default;
         display: block;
     }
 
-    &.image-1by1,
-    &.image-1by2,
-    &.image-1by3,
-    &.image-2by1,
-    &.image-2by3,
-    &.image-3by1,
-    &.image-3by2,
-    &.image-3by4,
-    &.image-3by5,
-    &.image-4by3,
-    &.image-4by5,
-    &.image-5by3,
-    &.image-5by4,
-    &.image-9by16,
-    &.image-16by9 {
-        img {
-            @include overlay;
-
-            width: 100%;
-            height: 100%;
+    @each $ratio, $padding in $image-ratios {
+        &.image-#{$ratio} {
+            padding-top: $padding;
+            @extend %ratio-image-position;
         }
-    }
-
-    &.image-1by1 {
-        padding-top: 100%;
-    }
-
-    &.image-1by2 {
-        padding-top: 200%;
-    }
-    
-    &.image-1by3 {
-        padding-top: 300%;
-    }
-
-    &.image-2by1 {
-        padding-top: 50%;
-    }
-
-    &.image-2by3 {
-        padding-top: 150%;
-    }
-
-    &.image-3by1 {
-        padding-top: 33.3333%;
-    }
-
-    &.image-3by2 {
-        padding-top: 66.6666%;
-    }
-
-    &.image-3by4 {
-        padding-top: 133.3333%;
-    }
-
-    &.image-3by5 {
-        padding-top: 166.6666%;
-    }
-
-    &.image-4by3 {
-        padding-top: 75%;
-    }
-
-    &.image-4by5 {
-        padding-top: 125%;
-    }
-
-    &.image-5by3 {
-        padding-top: 60%;
-    }
-
-    &.image-5by4 {
-        padding-top: 80%;
-    }
-
-    &.image-9by16 {
-        padding-top: 177.7777%;
-    }
-
-    &.image-16by9 {
-        padding-top: 56.25%;
     }
 
     @each $size in $image-sizes {
@@ -98,5 +40,14 @@ $image-sizes: 60 !default;
             width: $size * 1px;
             height: $size * 1px;
         }
+    }
+}
+
+%ratio-image-position {
+    img {
+        @include overlay;
+
+        width: 100%;
+        height: 100%;
     }
 }
