--- a/src/elements/hamburger.scss
+++ b/src/elements/hamburger.scss
@@ -2,7 +2,7 @@ $hamburger-color: config('colors.black') !default;
 
 $hamburger-width: 2rem !default;
 $hamburger-height: 1.5rem !default;
-$hambuger-spacing: 10px !default;
+$hamburger-spacing: 10px !default;
 $hamburger-padding: 0.75rem !default;
 
 .hamburger {
@@ -43,11 +43,11 @@ $hamburger-padding: 0.75rem !default;
         }
 
         &:before {
-            top: -#{$hambuger-spacing};
+            top: -#{$hamburger-spacing};
         }
 
         &::after {
-            bottom: -#{$hambuger-spacing};
+            bottom: -#{$hamburger-spacing};
         }
     }
 
