Box sizing and rotation helpers, responsive google recaptcha wrapper

--- a/src/elements/form.scss
+++ b/src/elements/form.scss
@@ -343,3 +343,12 @@ $field-margin: config('margin.2') !default;
         }
     }
 }
+
+.g-recaptcha {
+    display: flex;
+
+    @media (max-width: 370px) {
+        transform: scale(0.77);
+        justify-content: center;
+    }
+}
