--- a/src/elements/form.scss
+++ b/src/elements/form.scss
@@ -102,7 +102,9 @@ $field-margin: config('margin.2') !default;
 }
 
 .checkbox {
-    display: none;
+    width: 0;
+    height: 0;
+    opacity: 0;
 
     + label {
         cursor: pointer;
@@ -174,6 +176,10 @@ $field-margin: config('margin.2') !default;
                 background-color: $checkbox-checked-background-color;
             }
         }
+    }
+
+    &:focus + label {
+        outline: 5px auto -webkit-focus-ring-color;
     }
 }
 
