Remove references to primary colour, improve form elements interactivity

--- a/src/base/generic.scss
+++ b/src/base/generic.scss
@@ -15,7 +15,7 @@ $link-hover-color: config('colors.blue-dark') !default;
 
 $hr-background-color: config('colors.grey') !default;
 
-$blockquote-border-color: config('colors.primary') !default;
+$blockquote-border-color: config('colors.grey') !default;
 $blockquote-background-color: config('colors.white') !default;
 
 html {
