--- a/src/components/dropdown.scss
+++ b/src/components/dropdown.scss
@@ -17,7 +17,7 @@ $dropdown-item-hover-color: config('colors.black') !default;
 $dropdown-item-hover-background-color: config('colors.grey-lighter') !default;
 
 $dropdown-item-active-color: config('colors.white') !default;
-$dropdown-item-active-background-color: config('colors.primary') !default;
+$dropdown-item-active-background-color: config('colors.blue') !default;
 
 .dropdown {
     position: relative;
