--- a/src/elements/form.scss
+++ b/src/elements/form.scss
@@ -117,6 +117,7 @@ $field-margin: config('margin.2') !default;
     width: 0;
     height: 0;
     opacity: 0;
+    position: absolute;
 
     + label {
         cursor: pointer;
