--- a/src/components/pagination.scss
+++ b/src/components/pagination.scss
@@ -83,7 +83,7 @@ $pagination-disabled-background-color: config('colors.white') !default;
 }
 
 .pagination-link {
-    &.is-current {
+    &.current {
         color: $pagination-current-color;
         border-color: $pagination-current-border-color;
         background-color: $pagination-current-background-color;
